DeveloperOrg/force-app/main/default/objects/project__c/fields/Days_Since_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Start__c</fullName>
    <formula>TODAY() -  start_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Start</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>