DeveloperOrg/force-app/main/default/objects/project__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progres</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>