DeveloperOrg/force-app/main/default/objects/project__c/recordTypes/Client_Project_1.recordType-meta.xml
<RecordType>
    <fullName>Client_Project_1</fullName>
    <active>true</active>
    <label>Client Project 1</label>
</RecordType>