DeveloperOrg/force-app/main/default/objects/project__c/recordTypes/Internal_Project_1.recordType-meta.xml
<RecordType>
    <fullName>Internal_Project_1</fullName>
    <active>true</active>
    <label>Internal Project 1</label>
</RecordType>