DeveloperOrg/force-app/main/default/objects/project__c/recordTypes/mini_Project.recordType-meta.xml
<RecordType>
    <fullName>mini_Project</fullName>
    <active>true</active>
    <label>mini Project</label>
</RecordType>