DeveloperOrg/force-app/main/default/objects/project__c/validationRules/Budget.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget</fullName>
    <active>true</active>
    <errorConditionFormula>Budget__c  &lt;= 1000</errorConditionFormula>
    <errorMessage>Budget Grater Than 1000</errorMessage>
</ValidationRule>