DeveloperOrg/force-app/main/default/objects/project__c/validationRules/End_date_after_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_after_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>End_date__c   &lt;=  start_date__c</errorConditionFormula>
    <errorMessage>After start  Date.</errorMessage>
</ValidationRule>