DeveloperOrg/force-app/main/default/objects/project__c/validationRules/start_date_equal_today.validationRule-meta.xml
<ValidationRule>
    <fullName>start_date_equal_today</fullName>
    <active>true</active>
    <errorConditionFormula>start_date__c   &gt;=   TODAY()</errorConditionFormula>
    <errorMessage>Must Be Today</errorMessage>
</ValidationRule>