DeveloperOrg/force-app/main/default/objects/project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>status__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>