DeveloperOrg/force-app/main/default/objects/project__c/listViews/in_progress_project.listView-meta.xml
<ListView>
    <fullName>in_progress_project</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
        <value>In Progres</value>
    </filters>
    <label>in progress project</label>
</ListView>